# polynomial

./: .README.md.swp  .gitignore  .pyproject.toml.swp  LICENSE  README.md  pyproject.toml
src/: setup.py
src/polynomial_education/: .polynomial.py.swp  .rational.py.swp  __init__.py  polynomial.py  polynomial_old.py  rational.py
src/polynomial_education/ratio/: .rational.py.swo  __init__.py  primes.py  rational.py
tests/: test_prime.py  test_rational.py
