[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polynomial_education"
version = "0.0.7"
authors = [
  { name="Timothy Morris PhD", email="sirrommit@gmail.com" },
]
description = "A package for working with polynomials for producing educational documents"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 2 - Pre-Alpha",
]

[project.urls]
"Homepage" = "https://github.com/sirrommit/polynomial"
"Bug Tracker" = "https://github.com/sirrommit/polynomial/issues"
